--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ cookiecutter==1.6.0
 dateparser==0.7.2
 dj-database-url==0.5.0
 Django==2.2.6
+django-countries==6.0
 django-crispy-forms==1.8.1
 docker==4.1.0
 docutils==0.15.2
